Исправляет опечатку имени класса в футере

--- a/index.html
+++ b/index.html
@@ -223,10 +223,10 @@
       <li class="social-list__item">
         <a href="" class="button social-list__link">YT</a>
       </li>
-      <li class="subscribe-list__item">
+      <li class="social-list__item">
         <a href="" class="button social-list__link">ВК</a>
       </li>
-      <li class="subscribe-list__item">
+      <li class="social-list__item">
         <a href="" class="button social-list__link">TG</a>
       </li>
     </ul>
