Меняет имена классов в вёрстке, чтобы потом не приходилось пользоваться вложенностью

--- a/index.html
+++ b/index.html
@@ -216,8 +216,8 @@
     </section>
   </main>
   <footer class="footer">
-    <a href="./index.html" class="logo">
-      <span class="logo__name">pindie</span><span class="logo__copy">, XXI век</span>
+    <a href="./index.html" class="footer__logo">
+      <span class="footer__logo-name">pindie</span><span class="footer__logo-copy">, XXI век</span>
     </a>
     <ul class="social-list">
       <li class="social-list__item">
