улучшения после верстки второй темы

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </nav>
   </header>
   <main class="main">
-    <sction class="banner">
+    <section class="banner">
       <div class="banner__description">
         <h1 class="banner__title">Портал инди-игр от&nbsp;студентов Яндекс Практикума</h1>
         <div class="banner__text-block">
@@ -39,7 +39,7 @@
         <a href="#popular" class="button banner__link">Смотреть игры</a>
       </div>
       <img src="./images/banner-illustration.jpg" alt="Рука, утопленная в желтом фоне" class="banner__image">
-    </sction>
+    </section>
     <section class="list-section">
       <h2 class="list-section__title" id="popular">Популярное</h2>
       <ul class="cards-list">
@@ -124,7 +124,7 @@
       </ul>
     </section>
     <section class="list-section">
-      <h2 class="list-section__title">Новинки</h2>
+      <h2 class="list-section__title" id="new">Новинки</h2>
       <ul class="cards-list">
         <li class="cards-list__item">
           <a href="./game-id.html" class="card-list__link">
