--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                   class="card__image"
                 />
                 <div class="card__content-block">
-                  <h3 class="card__title">G.U.N.N.E.R</h3>
+                  <h3 class="card__title">G.U.N.N.E.R.</h3>
                   <p class="card__description">
                     Ваша задача — отбиваться от бесконечных волн врагов, которых
                     будет становится все больше и больше, как долго вы сможете
