Упростил для вёрстки модулями

--- a/index.html
+++ b/index.html
@@ -60,10 +60,12 @@
         />
       </section>
       <section class="list-section">
-        <h2 class="list-section__title" id="popular">Популярное</h2>
+        <h2 class="list-section__title" id="popular">
+          Популярное
+        </h2>
         <ul class="cards-list">
           <li class="cards-list__item">
-            <a href="./game-id.html" class="card-list__link">
+            <a href="/game-id.html" class="card-list__link">
               <article class="card">
                 <img
                   src="https://code.s3.yandex.net/teens/pindie-games/cristal-keeper/cover.png"
@@ -76,18 +78,20 @@
                     Управляйте боевым дроном и в течении 5 минут любой ценой
                     защищайте кристалл от враждебных космо-слизней.
                   </p>
-                  <p class="card__author">
-                    Автор: <span class="card__accent">Lonely Baobab</span>
-                  </p>
-                  <p class="card__votes">
-                    Голосов на сайте: <span class="card__accent">20</span>
-                  </p>
+                  <div class="card__info-container">
+                    <p class="card__author">
+                      Автор: <span class="card__accent">Lonely Baobab</span>
+                    </p>
+                    <p class="card__votes">
+                      Голосов на сайте: <span class="card__accent">20</span>
+                    </p>
+                  </div>
                 </div>
               </article>
             </a>
           </li>
           <li class="cards-list__item">
-            <a href="./game-id.html" class="card-list__link">
+            <a href="/game-id.html" class="card-list__link">
               <article class="card">
                 <img
                   src="https://code.s3.yandex.net/teens/pindie-games/dangeons-n-caves-prologue/cover.png"
@@ -100,18 +104,20 @@
                     Безымянный герой исследует пещеры и подземелья, чтобы найти
                     больше информации о себе.
                   </p>
-                  <p class="card__author">
-                    Автор: <span class="card__accent">F-Style</span>
-                  </p>
-                  <p class="card__votes">
-                    Голосов на сайте: <span class="card__accent">10</span>
-                  </p>
+                  <div class="card__info-container">
+                    <p class="card__author">
+                      Автор: <span class="card__accent">F-Style</span>
+                    </p>
+                    <p class="card__votes">
+                      Голосов на сайте: <span class="card__accent">10</span>
+                    </p>
+                  </div>
                 </div>
               </article>
             </a>
           </li>
           <li class="cards-list__item">
-            <a href="./game-id.html" class="card-list__link">
+            <a href="/game-id.html" class="card-list__link">
               <article class="card">
                 <img
                   src="https://code.s3.yandex.net/teens/pindie-games/defence-of-crystal/cover.png"
@@ -127,12 +133,14 @@
                     круги своя, но полчища монстров так и норовят его
                     уничтожить. Ваша задача уничтожить все кладбища.
                   </p>
-                  <p class="card__author">
-                    Автор: <span class="card__accent">MastWe</span>
-                  </p>
-                  <p class="card__votes">
-                    Голосов на сайте: <span class="card__accent">20</span>
-                  </p>
+                  <div class="card__info-container">
+                    <p class="card__author">
+                      Автор: <span class="card__accent">MastWe</span>
+                    </p>
+                    <p class="card__votes">
+                      Голосов на сайте: <span class="card__accent">20</span>
+                    </p>
+                  </div>
                 </div>
               </article>
             </a>
@@ -140,10 +148,12 @@
         </ul>
       </section>
       <section class="list-section">
-        <h2 class="list-section__title" id="new">Новинки</h2>
+        <h2 class="list-section__title" id="new">
+          Новинки
+        </h2>
         <ul class="cards-list">
           <li class="cards-list__item">
-            <a href="./game-id.html" class="card-list__link">
+            <a href="/game-id.html" class="card-list__link">
               <article class="card">
                 <img
                   src="https://code.s3.yandex.net/teens/pindie-games/go-away/cover.jpg"
@@ -159,18 +169,20 @@
                     улучшают характеристики машинки в скорости. "Прыжок"
                     позволяет машинке перепрыгивать препятствие.
                   </p>
-                  <p class="card__author">
-                    Автор: <span class="card__accent">Mahisto</span>
-                  </p>
-                  <p class="card__votes">
-                    Голосов на сайте: <span class="card__accent">20</span>
-                  </p>
+                  <div class="card__info-container">
+                    <p class="card__author">
+                      Автор: <span class="card__accent">Mahisto</span>
+                    </p>
+                    <p class="card__votes">
+                      Голосов на сайте: <span class="card__accent">20</span>
+                    </p>
+                  </div>
                 </div>
               </article>
             </a>
           </li>
           <li class="cards-list__item">
-            <a href="./game-id.html" class="card-list__link">
+            <a href="/game-id.html" class="card-list__link">
               <article class="card">
                 <img
                   src="https://code.s3.yandex.net/teens/pindie-games/gunner/cover.png"
@@ -184,18 +196,20 @@
                     будет становится все больше и больше, как долго вы сможете
                     продержаться?
                   </p>
-                  <p class="card__author">
-                    Автор: <span class="card__accent">IDKWIAm</span>
-                  </p>
-                  <p class="card__votes">
-                    Голосов на сайте: <span class="card__accent">10</span>
-                  </p>
+                  <div class="card__info-container">
+                    <p class="card__author">
+                      Автор: <span class="card__accent">IDKWIAm</span>
+                    </p>
+                    <p class="card__votes">
+                      Голосов на сайте: <span class="card__accent">10</span>
+                    </p>
+                  </div>
                 </div>
               </article>
             </a>
           </li>
           <li class="cards-list__item">
-            <a href="./game-id.html" class="card-list__link">
+            <a href="/game-id.html" class="card-list__link">
               <article class="card">
                 <img
                   src="https://code.s3.yandex.net/teens/pindie-games/space-terror/cover.png"
@@ -208,18 +222,20 @@
                     Летите сквозь космос и уничтожайте все на своем пути!
                     Пролетите как можно дальше!
                   </p>
-                  <p class="card__author">
-                    Автор: <span class="card__accent">IDKWIAm</span>
-                  </p>
-                  <p class="card__votes">
-                    Голосов на сайте: <span class="card__accent">20</span>
-                  </p>
+                  <div class="card__info-container">
+                    <p class="card__author">
+                      Автор: <span class="card__accent">IDKWIAm</span>
+                    </p>
+                    <p class="card__votes">
+                      Голосов на сайте: <span class="card__accent">20</span>
+                    </p>
+                  </div>
                 </div>
               </article>
             </a>
           </li>
           <li class="cards-list__item">
-            <a href="./game-id.html" class="card-list__link">
+            <a href="/game-id.html" class="card-list__link">
               <article class="card">
                 <img
                   src="https://code.s3.yandex.net/teens/pindie-games/square-slayer/cover.png"
@@ -231,12 +247,14 @@
                   <p class="card__description">
                     circle shoot square heal levelup crash game.
                   </p>
-                  <p class="card__author">
-                    Автор: <span class="card__accent">niclan</span>
-                  </p>
-                  <p class="card__votes">
-                    Голосов на сайте: <span class="card__accent">10</span>
-                  </p>
+                  <div class="card__info-container">
+                    <p class="card__author">
+                      Автор: <span class="card__accent">niclan</span>
+                    </p>
+                    <p class="card__votes">
+                      Голосов на сайте: <span class="card__accent">10</span>
+                    </p>
+                  </div>
                 </div>
               </article>
             </a>
