обновляет описания игр

--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@
                 <div class="card__content-block">
                   <h3 class="card__title">Crystal Kepper</h3>
                   <p class="card__description">
-                    Управляйте боевым дроном и в течении 5 минут любой ценой
-                    защищайте кристалл от враждебных космо-слизней.
+                    Управляй боевым дроном, чтобы любой ценой защитить кристалл от враждебных космо-слизней.
                   </p>
                   <div class="card__info-container">
                     <p class="card__author">
@@ -101,8 +100,7 @@
                 <div class="card__content-block">
                   <h3 class="card__title">Dangeons'n'Caves. Prologue</h3>
                   <p class="card__description">
-                    Безымянный герой исследует пещеры и подземелья, чтобы найти
-                    больше информации о себе.
+                    Безымянный герой исследует пещеры и подземелья, чтобы найти больше информации о себе.
                   </p>
                   <div class="card__info-container">
                     <p class="card__author">
@@ -127,11 +125,7 @@
                 <div class="card__content-block">
                   <h3 class="card__title">Defence of Crystal</h3>
                   <p class="card__description">
-                    Вы играете за волшебника, последнюю надежду Земли, которую
-                    поглотил мрак... Вы должны любой ценой защищать магический
-                    кристалл, ведь это единственное, что сможет вернуть всё на
-                    круги своя, но полчища монстров так и норовят его
-                    уничтожить. Ваша задача уничтожить все кладбища.
+                    Защищай магический кристалл от монстров и уничтожай кладбища, чтобы спасти Землю, которую поглотил мрак.
                   </p>
                   <div class="card__info-container">
                     <p class="card__author">
@@ -163,11 +157,7 @@
                 <div class="card__content-block">
                   <h3 class="card__title">Go Away</h3>
                   <p class="card__description">
-                    Цель игры: добраться до конца уровня, не столкнувшись с
-                    встречными автомобилями.Дополнительные возможности: в игре
-                    можно проезжать по увеличивающей скорость стрелке, которые
-                    улучшают характеристики машинки в скорости. "Прыжок"
-                    позволяет машинке перепрыгивать препятствие.
+                    Управляй автомобилем, избегая аварий и перепрыгивая препятствия на пути к следующему уровню.
                   </p>
                   <div class="card__info-container">
                     <p class="card__author">
@@ -192,9 +182,7 @@
                 <div class="card__content-block">
                   <h3 class="card__title">G.U.N.N.E.R.</h3>
                   <p class="card__description">
-                    Ваша задача — отбиваться от бесконечных волн врагов, которых
-                    будет становится все больше и больше, как долго вы сможете
-                    продержаться?
+                    Продержись как можно дольше, отбиваясь от врагов, которых будет становиться всё больше.
                   </p>
                   <div class="card__info-container">
                     <p class="card__author">
@@ -219,8 +207,7 @@
                 <div class="card__content-block">
                   <h3 class="card__title">Space Terror</h3>
                   <p class="card__description">
-                    Летите сквозь космос и уничтожайте все на своем пути!
-                    Пролетите как можно дальше!
+                    Лети как можно дальше в космическом пространстве, уничтожая всё на своём пути.
                   </p>
                   <div class="card__info-container">
                     <p class="card__author">
@@ -245,7 +232,7 @@
                 <div class="card__content-block">
                   <h3 class="card__title">Square Slayer</h3>
                   <p class="card__description">
-                    circle shoot square heal levelup crash game.
+                    Уворачивайся и отстреливайся от озлобленных квадратов и собирай жизни для перехода на следующий уровень.
                   </p>
                   <div class="card__info-container">
                     <p class="card__author">
