--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <a href="" class="menu__link">Шутеры</a>
           </li>
           <li class="menu__item">
-            <a href="" class="menu__link">Ранеры</a>
+            <a href="" class="menu__link">Раннеры</a>
           </li>
           <li class="menu__item">
             <a href="" class="menu__link">Пиксельные</a>
