промо-код → промокод

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
       </section>
       <section class="promo">
         <div class="promo__description-block">
-          <h2 class="promo__title">Твой промо-код</h2>
+          <h2 class="promo__title">Твой промокод</h2>
           <p class="promo__description">Скидка на все курсы Яндекс Практикума для пользователей нашего сайта!</p>
           <button class="button promo__button">Получить код</button>
         </div>
